feat(UI): implement the error state on the invoice form

--- a/docs/assets/styles/screen_styles.css
+++ b/docs/assets/styles/screen_styles.css
@@ -97,6 +97,7 @@
   }
 }
 date-picker > .calendar-grid {
+  font-weight: bold;
   display: var(--calendar-display, none);
   grid-template-columns: repeat(7, auto);
   position: absolute;
@@ -133,8 +134,6 @@ button {
   font-weight: 900;
   text-transform: capitalize;
   font-size: clamp(0.75em, 4cqi, 1em);
-  min-inline-size: 4.5rem;
-  min-block-size: 3rem;
 }
 .heading-l {
   --f-size: var(--system-heading-large);
@@ -177,6 +176,8 @@ button {
 [class*="btn"]:is(:focus,
 :hover) {
   background-color: var(--color-fill-hover, transparent);
+  min-inline-size: 4.5rem;
+  min-block-size: 3rem;
 }
 .btn.back {
   align-self: start;
@@ -256,7 +257,7 @@ label {
   inline-size: 1.5rem;
   aspect-ratio: 1;
   background-color: var(--deco-fill, var(--icon-fill, var(--system-color-softBlue)));
-  clip-path: url("#arrow_left");
+  clip-path: url(#arrow_left);
   transform: var(--icon-transform, none);
 }
 [data-icon="arrow_down"] {
@@ -268,7 +269,7 @@ label {
   inline-size: 1em;
   aspect-ratio: 0.6;
   background-color: var(--deco-fill, var(--system-color-softBlue));
-  clip-path: url("#arrow_down");
+  clip-path: url(#arrow_down);
   transform: var(--transformation, none);
 }
 [open] [data-icon="arrow_down"] {
@@ -645,12 +646,12 @@ step-by-step > .step-out {
   font-size: clamp(1.2em, 4cqi, 1.5em);
   color: var(--system-color-softBlue);
 }
-.input-step > div {
+.input-step > * {
   display: flex;
   flex-flow: column-reverse nowrap;
 }
-.input-step :is(input,
-.input-step select) {
+:is(input,
+select) {
   min-inline-size: 100%;
   font-weight: bold;
   color: var(--system-color-text);
@@ -659,14 +660,31 @@ step-by-step > .step-out {
   border: 1px solid var(--input-bd-clr, var(--system-color-lightPurple));
   border-radius: 0.25em;
 }
-.input-step :is(input:hover,
-.input-step select):hover {
+:is(input,
+select):is(:hover,
+:focus) {
   --input-bd-clr: var(--system-color-softBlue);
+}
+:is(input,
+select):invalid {
+  --input-bd-clr: var(--system-color-softRed);
+}
+:is(input,
+select):invalid ~ label {
+  color: var(--system-color-softRed);
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+:is(input,
+select):invalid ~ label::after {
+  content: attr(data-error, "");
+  font-size: 0.7em;
+  text-transform: none;
 }
 date-picker {
   position: relative;
   isolation: isolate;
-  font-weight: bold;
 }
 date-picker[data-show] {
   --calendar-display: grid;
@@ -674,15 +692,15 @@ date-picker[data-show] {
 date-picker [disabled] {
   opacity: 0.6;
 }
-date-picker [data-action="previous month"]::before,
-date-picker [data-action="next month"]::before {
+date-picker .control::before {
+  content: "";
   inline-size: 1.5rem;
   aspect-ratio: 1;
   background-color: var(--deco-fill, var(--system-color-softBlue));
-  clip-path: url("#arrow_left");
+  clip-path: url(#arrow_left);
   display: inline-block;
 }
-date-picker [data-action="next month"]::before {
+date-picker [data-action*="next"]::before {
   transform: rotateZ(180deg);
 }
 date-picker .today {
@@ -910,19 +928,15 @@ dialog > .row {
     --theme-clip: url("#light_mode");
   }
 }
-@media (prefers-reduced-motion: no-preference) {
-  :is(body,
-  .box),
-  .step-indicator li::before,
-  .step-indicator li::after {
-    transition: color 0.35s ease-in, background-color, 0.35s ease-out;
-  }
-  :is(.drawer,
-  input,
-  [class*="btn"]),
-  .theme-switch::before,
-  [data-icon]::before,
-  [data-icon]::after {
-    transition: all 0.35s ease-out;
-  }
+
+@media(prefers-reduced-motion: no-preference) {
+	:is(body, .box), .step-indicator li::before, .step-indicator li::after {
+	    transition: color .35s ease-in, background-color, .35s ease-out;
+	}
+	:is(.drawer, input, select, [class*="btn"]), .theme-switch::before, [data-icon]::before, [data-icon]::after {
+	    transition: all .35s ease-out;
+	}
+	step-by-step > * {
+      transition: transform .35s ease-out;
+	}
 }
