fix(layout): refactor the css to reduce redundancies

--- a/src/styles/layouts.styl
+++ b/src/styles/layouts.styl
@@ -27,7 +27,7 @@
     display: grid
     place-items: center
     place-content: center
-
+    gap: var(--s-space, 1.5em)
 @css{
 :is(.blank-box, .box) {
     padding: var(--min-padding, 1.5em);
