--- a/docs/assets/styles/screen_styles.css
+++ b/docs/assets/styles/screen_styles.css
@@ -41,31 +41,72 @@
   font-feature-settings: "zero";
 }
 @layer utils {
-  .invoice-grid {
+  .stack > * + * {
+    margin-block-start: var(--s-space, 1.5em);
+  }
+
+:is(.row, .column, .segragator) {
+  display: flex;
+  align-items: var(--alignment, center);
+  gap: var(--r-space, var(--c-space, 1.5em));
+  justify-content: var(--i-alignment, start);
+}
+  .grow-2 {
+    flex-grow: 2;
+  }
+  .no-shrink {
+    flex-shrink: 0;
+  }
+  .segragator {
+    --i-alignment: space-between;
+    flex-flow: var(--direction, row) var(--wrap, nowrap);
+  }
+  .row {
+    --alignment: var(--row-align, center);
+    flex-flow: var(--row-dir, row) var(--wrap, nowrap);
+  }
+  .column {
+    --alignment: var(--col-align, stretch);
+    flex-flow: var(--col-dir, column) var(--wrap, nowrap);
+  }
+  .center {
     display: grid;
-    grid-template: var(--invoice-grid);
-    align-items: var(--item-alignment, var(--alignment, center));
-    gap: var(--invoice-gap, initial);
-    container: invoice/inline-size;
+    place-items: center;
+    place-content: center;
+    gap: var(--s-space, 1.5em);
   }
-  .invoice-grid > :first-child {
-    grid-area: ref;
-  }
-  .invoice-grid> :nth-child(2) {
-    grid-area: date;
-  }
-  .invoice-grid > :nth-child(3) {
-    grid-area: name;
-  }
-  .invoice-grid > :nth-child(4) {
-    grid-area: total;
-  }
-  .invoice-grid > :nth-child(5) {
-    grid-area: status;
-  }
-  .sm-hide {
-    display: none;
-  }
+
+:is(.blank-box, .box) {
+  padding: var(--min-padding, 1.5em);
+  background-color: var(--color-fill, transparent);
+  color: var(--color-text, currentColor);
+  border-radius: var(--radius, 0);
+}
+}
+.invoice-grid {
+  display: grid;
+  grid-template: var(--invoice-grid);
+  align-items: var(--item-alignment, var(--alignment, center));
+  gap: var(--invoice-gap, initial);
+  container: invoice/inline-size;
+}
+.invoice-grid > :first-child {
+  grid-area: ref;
+}
+.invoice-grid> :nth-child(2) {
+  grid-area: date;
+}
+.invoice-grid > :nth-child(3) {
+  grid-area: name;
+}
+.invoice-grid > :nth-child(4) {
+  grid-area: total;
+}
+.invoice-grid > :nth-child(5) {
+  grid-area: status;
+}
+.sm-hide {
+  display: none;
 }
 [data-apearence="dark"] {
   --color-text: var(--system-color-lightGrayishBlue);
@@ -232,74 +273,57 @@ label {
   color: var(--system-color-text);
   font-weight: bold;
 }
-[data-icon]:is(:focus,
-:hover):not(:disabled) {
-  --deco-fill: var(--icon-fill-hover, currentColor);
-  --icon-transform: var(--hover-transform, inherit);
-  color: var(--color-text-hover, var(--system-color-lightBlue));
+
+:is(.icon-start, .theme-switch)::before,.icon-end::after {
+  content: "";
+  min-inline-size: var(--icon-size, 1.5em);
+  aspect-ratio: var(--icon-ratio, 1);
+  display: inline-block;
+  background-color: var(--icon-fill, currentColor);
+  transform: var(--icon-transform, none);
+  clip-path: var(--icon-clip, none);
+  border-radius: var(--icon-radius, 0px);
+}
+.icon-start:is(:hover,:focus)::before,.icon-end:is(:hover,:focus)::after {
+  --icon-fill: var(--icon-fill-hover, currentColor);
+  --icon-transform: var(--icon-hoverTransform, none);
 }
 [data-icon]:disabled {
-  --deco-fill: currentColor;
+  --icon-fill: currentColor;
   opacity: 0.6;
   color: var(--system-color-disabled);
 }
-[data-icon]::before,
-[data-icon]::after {
-  content: "";
-  display: inline-block;
-  flex-shrink: 0;
-}
 [data-icon="arrow_right"] {
+  --icon-clip: url(#arrow_left);
   --icon-transform: rotate(180deg);
-  --row-dir: row-reverse;
-  --hover-transform: rotate(180deg) translateX(0.5em);
+  --icon-hoverTransform: rotate(180deg) translateX(0.5em);
 }
 [data-icon="arrow_left"] {
-  --hover-transform: translateX(0.5em);
+  --icon-hoverTransform: translateX(0.5em);
+  --icon-clip: url(#arrow_left);
 }
-:is([data-icon="arrow_left"],
-[data-icon="arrow_right"])::before {
-  inline-size: 1.5rem;
-  aspect-ratio: 1;
-  background-color: var(--deco-fill, var(--icon-fill, var(--system-color-softBlue)));
-  clip-path: url(#arrow_left);
-  transform: var(--icon-transform, none);
+[data-icon*="arrow"] {
+  --icon-fill: var(--system-color-softBlue);
 }
 [data-icon="arrow_down"] {
   --min-padding: 0.75em 1.5em 0.75em 0;
   --r-space: 0.1em;
+  --icon-clip: url(#arrow_down);
   cursor: pointer;
 }
-[data-icon="arrow_down"]::after {
-  inline-size: 1em;
-  aspect-ratio: 0.6;
-  background-color: var(--deco-fill, var(--system-color-softBlue));
-  clip-path: url(#arrow_down);
-  transform: var(--transformation, none);
-}
 [open] [data-icon="arrow_down"] {
-  --transformation: rotateZ(180deg);
+  --icon-transform: rotateZ(180deg);
 }
 [data-icon="add-circle"] {
   --min-padding: 0.75em clamp(0.5em, 2vw, 1.5em) 0.75em 0.5em;
+  --icon-siize: 2em;
+  --icon-clip: url(#add-circle);
 }
-[data-icon="add-circle"]::before {
-  inline-size: 2em;
-  aspect-ratio: 1;
-  background-color: var(--deco-fill, currentColor);
-  clip-path: url("#add-circle");
+[data-icon="warning"] {
+  --icon-clip: url(#warning);
 }
-[data-icon="warning"]::before {
-  inline-size: 1.5em;
-  aspect-ratio: 1;
-  background-color: var(--deco-fill, currentColor);
-  clip-path: url("#warning");
-}
-[data-icon="delete"]::before {
-  inline-size: 1.5em;
-  aspect-ratio: 1;
-  background-color: var(--deco-fill, var(--icon-fill, currentColor));
-  clip-path: url(#delete);
+[data-icon="delete"] {
+  --icon-clip: url(#delete);
 }
 [data-status="pending"] {
   --status-fill: var(--system-color-pureOrange);
@@ -320,46 +344,6 @@ label {
 [data-suffix]::after {
   content: var(--suffix, attr(data-suffix));
   color: var(--suffix-color, currentColor);
-}
-.stack > * + * {
-  margin-block-start: var(--s-space, 1.5em);
-}
-
-:is(.row, .column, .segragator) {
-  display: flex;
-  align-items: var(--alignment, center);
-  gap: var(--r-space, var(--c-space, 1.5em));
-  justify-content: var(--i-alignment, start);
-}
-.grow-2 {
-  flex-grow: 2;
-}
-.no-shrink {
-  flex-shrink: 0;
-}
-.segragator {
-  --i-alignment: space-between;
-  flex-flow: var(--direction, row) var(--wrap, nowrap);
-}
-.row {
-  --alignment: var(--row-align, center);
-  flex-flow: var(--row-dir, row) var(--wrap, nowrap);
-}
-.column {
-  --alignment: var(--col-align, stretch);
-  flex-flow: var(--col-dir, column) var(--wrap, nowrap);
-}
-.center {
-  display: grid;
-  place-items: center;
-  place-content: center;
-}
-
-:is(.blank-box, .box) {
-  padding: var(--min-padding, 1.5em);
-  background-color: var(--color-fill, transparent);
-  color: var(--color-text, currentColor);
-  border-radius: var(--radius, 0);
 }
 #logo {
   width: 72px;
@@ -449,15 +433,9 @@ label {
   --icon-fill: var(--system-color-lightPurple);
 }
 .theme-switch {
+  --icon-size: 32px;
+  --icon-clip: var(--system-theme-clip);
   border-inline-end: 1px solid var(--system-color-grayishBlue);
-}
-.theme-switch::before {
-  content: "";
-  display: inline-block;
-  inline-size: 32px;
-  aspect-ratio: 1;
-  background-color: var(--icon-fill, currentColor);
-  clip-path: var(--system-theme-clip);
 }
 .banner {
   --alignment: stretch;
@@ -478,14 +456,9 @@ label {
 *:not(:empty) + .empty {
   display: none;
 }
-:is(*:empty + .empty,
-.center) {
-  display: grid;
-  place-content: center;
-  place-items: center;
-}
 .empty {
   --min-padding: 2em 1.5em 0;
+  text-align: center;
 }
 .empty > p {
   max-inline-size: 25ch;
@@ -566,19 +539,13 @@ label {
   --min-padding: var(--status-padding);
   --color-text: var(--status-text, inherit);
   --color-fill: var(--status-fill, inherit);
+  --icon-size: 0.5em;
+  --icon-radius: 50%;
   display: inline-flex;
   align-items: center;
   gap: 0.25em;
   text-transform: capitalize;
   font-weight: bold;
-}
-.status-box::before {
-  content: "";
-  display: inline-block;
-  inline-size: 0.5em;
-  aspect-ratio: 1;
-  background-color: var(--deco-fill, currentColor);
-  border-radius: 50%;
 }
 .invoice__status {
   --status-padding: 0.75rem clamp(0.5em, 2cqi, 1.5em);
@@ -963,10 +930,10 @@ dialog > .row {
 }
 
 @media(prefers-reduced-motion: no-preference) {
-	:is(body, .box), .step-indicator li::before, .step-indicator li::after {
+	.box, .step-indicator li::before, .step-indicator li::after {
 	    transition: color .35s ease-in, background-color, .35s ease-out;
 	}
-	:is(.drawer, input, select, [class*="btn"]), .theme-switch::before, [data-icon]::before, [data-icon]::after {
+	:is(.drawer, input, select, [class*="btn"]), :is(.theme-switch, .icon-start)::before, .icon-end::after {
 	    transition: all .35s ease-out;
 	}
 	step-by-step > * {
