--- a/src/styles/screen_styles.styl
+++ b/src/styles/screen_styles.styl
@@ -99,7 +99,7 @@ darkShade()
 		    grid-area: status
 	.sm-hide
 	    display: none
-[data-apearence="dark"]
+[data-theme="dark"]
     darkShade()
 
 @css {
@@ -232,7 +232,7 @@ button
 .icon-start:is(:hover,:focus)::before,
 .icon-end:is(:hover,:focus)::after {
     --icon-fill: var(--icon-fill-hover, currentColor);
-    --icon-transform: var(--icon-hoverTransform, none);
+    --icon-transform: var(--icon-hoverTransform, inherit);
 }
 
 }
@@ -651,11 +651,10 @@ noscript[data-status]
     margin-inline: .5em
     background-color: var(--system-color-lightRed)
 dialog:not([open])
-    display: none
     transform: scale(0)
 dialog
     --min-padding: clamp(.5em, 4cqi, 1.5em)
-    --f-size: var(--system-heading-medium)
+    --f-size: 1.2em
     color: var(--color-text, var(--system-color-darkBlue))
     container: dialog / inline-size
     inline-size: @css{min(480px, 80vi)}
@@ -666,11 +665,11 @@ dialog
     &::backdrop
         background-color: var(--system-color-backdropFill)
 
-    & > h3
+    & h3
         text-transform: capitalize
         color: var(--system-color-text)
 
-    & > .row
+    & .row
         justify-content: end
 
 @media screen and (min-width: 480px)
@@ -759,12 +758,12 @@ dialog
         --min-padding: 1.5em 1.5em 1.5em calc(72px + 1.5em)
 
 @media(prefers-color-scheme: dark)
-    :root:not([data-apearence="light"])
+    :root:not([data-theme="light"])
         darkShade()
 
 @css{
 @media(prefers-reduced-motion: no-preference) {
-	.box, .step-indicator li::before, .step-indicator li::after {
+	.blank-box, .step-indicator li::before, .step-indicator li::after {
 	    transition: color .35s ease-in, background-color, .35s ease-out;
 	}
 	:is(.drawer, input, select, [class*="btn"]), :is(.theme-switch, .icon-start)::before, .icon-end::after {
@@ -773,5 +772,8 @@ dialog
 	step-by-step > * {
         transition: transform .35s ease-out;
 	}
+    dialog.blank-box {
+        transition: transform .35s cubic-bezier(.25, .1, .3, 1.5);
+    }
 }
 }
